RESOLVED FIXED269648
Crash under SQLiteDatabase::~SQLiteDatabase
https://bugs.webkit.org/show_bug.cgi?id=269648
Summary Crash under SQLiteDatabase::~SQLiteDatabase
Chris Dumez
Reported 2024-02-17 14:39:11 PST
Crash under SQLiteDatabase::~SQLiteDatabase: ``` 11 WTFCrashWithInfo(int, char const*, char const*, int) 11 WTF::CanMakeCheckedPtrBase<std::__1::atomic<unsigned int>, unsigned int>::~CanMakeCheckedPtrBase() ==> 11 WebCore::SQLiteDatabase::~SQLiteDatabase() <== 8 std::__1::default_delete<WebCore::SQLiteDatabase>::operator()[abi:sn170006](WebCore::SQLiteDatabase*) const | 8 std::__1::unique_ptr<WebCore::SQLiteDatabase, std::__1::default_delete<WebCore::SQLiteDatabase>>::reset[abi:sn170006](WebCore::SQLiteDatabase*) | 8 std::__1::unique_ptr<WebCore::SQLiteDatabase, std::__1::default_delete<WebCore::SQLiteDatabase>>::operator=[abi:sn170006](std::nullptr_t) | 8 WebKit::SQLiteStorageArea::handleDatabaseCorruptionIfNeeded(int) | 8 WebKit::SQLiteStorageArea::allItems() | 8 WebKit::NetworkStorageManager::connectToStorageArea(IPC::Connection&, WebCore::StorageType, ```
Attachments
Chris Dumez
Comment 1 2024-02-17 14:39:23 PST
Chris Dumez
Comment 2 2024-02-17 14:47:39 PST
EWS
Comment 3 2024-02-17 20:02:02 PST
Committed 274937@main (f6305e2e3567): <https://commits.webkit.org/274937@main> Reviewed commits have been landed. Closing PR #24689 and removing active labels.
Marta Darbinyan
Comment 4 2024-02-19 12:18:12 PST
Breaks multiple API tests in macOS Debug, tracking revert in rdar://123255000
Chris Dumez
Comment 5 2024-02-19 13:46:48 PST
EWS
Comment 6 2024-02-19 19:25:26 PST
Committed 275016@main (9e9cc91fdea3): <https://commits.webkit.org/275016@main> Reviewed commits have been landed. Closing PR #24771 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.