Source/WebCore/platform/sql/SQLiteTransaction.h
@@ -26,9 +26,9 @@
 #ifndef SQLiteTransaction_h
 #define SQLiteTransaction_h
 
-#include <wtf/CheckedRef.h>
 #include <wtf/FastMalloc.h>
 #include <wtf/Noncopyable.h>
+#include <wtf/CheckedRef.h>
 
 namespace WebCore {
 
